--- a/ZPZP/Views/Shared/_adminProductionLayout.cshtml
+++ b/ZPZP/Views/Shared/_adminProductionLayout.cshtml
@@ -2,6 +2,28 @@
 <html>
 <head>
     <title>ZPZP</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            var userImage = '@ViewBag.Image';
+            var userPassword = '@ViewBag.Password';
+
+            $.ajax({
+                url: '@Url.Action("Settings", "ProductionController")',
+                type: 'POST',
+                data: {
+                    userImage: userImage,
+                    userPassword: userPassword
+                },
+                success: function (response) {
+                    console.log('Data sent successfully:', response);
+                },
+                error: function (xhr, status, error) {
+                    console.error('Error sending data:', status, error);
+                }
+            });
+        }); //AJAX - important to send view + values for controller
+    </script>
     <link href="/Styles/Style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
@@ -11,9 +33,9 @@
             </div>
         <div id="main">
             <div class="btn-group" style="width:100%">
-                <button style="width:20%">Ustawienia</button>
+                <button style="width:20%" onclick="window.location.href='dashboard/settings';">Ustawienia</button>
                 <button style="width:20%">Dodaj projekt</button>
-                <button style="width:20%">Wyświetl projekty</button>
+                <button style="width:20%">Produkcja</button>
                 <button style="width:20%">Lista pracowników</button>
                 <button style="width:20%">Statystyki</button>
             </div>
