--- a/ZPZP/Views/Home/Index.cshtml
+++ b/ZPZP/Views/Home/Index.cshtml
@@ -29,6 +29,10 @@
                 @ViewBag.ErrorMessage
             </div>
         }
+        @if (ViewBag.Message != null)
+        {
+            <p>@ViewBag.Message</p>
+        }
 
     </form>
 </div>
