--- a/ZPZP/Views/Production/AdminDashboard.cshtml
+++ b/ZPZP/Views/Production/AdminDashboard.cshtml
@@ -4,6 +4,7 @@
 <head>
     <title>ZPZP</title>
     <link href="/Styles/StyleAdmin.css" rel="stylesheet" type="text/css" />
+  
 </head>
 <br />
 <div class="row">
@@ -30,6 +31,45 @@
             </div>
         </div>
     </div>
+
+    <div class="row">
+        <div class="column">
+            <div class="container">
+                <form action="/dashboard/settings-password" method="post">
+                    <div>
+                        <label for="newPwd">Wprowadź nowe hasło:</label>
+                        <input type="password" id="newPwd" name="newPwd" />
+                    </div>
+                    <div>
+                    <input type="hidden" name="userID" value="@ViewBag.ID" />
+                    </div>
+                        <div>
+                            <button type="submit">Zmień hasło</button>
+                        </div>
+                </form>
+
+
+                <form action="/dashboard/settings-image" method="post" enctype="multipart/form-data">
+                <div>
+                    <label for="file">Choose a photo:</label>
+                    <input type="file" id="file" name="file" accept="image/*" required />
+                </div>
+                <div>
+                    <input type="hidden" name="userID" value="@ViewBag.ID" />
+                </div>
+                <div>
+                    <button type="submit">Upload</button>
+                </div>
+                </form>
+
+
+            </div>
+            </div>
+        </div>
+
+
+
+
 </div>
 
 
