--- a/ZPZP/Views/Production/AdminSettings.cshtml
+++ b/ZPZP/Views/Production/AdminSettings.cshtml
@@ -6,7 +6,7 @@
     <link href="/Styles/StyleAdmin.css" rel="stylesheet" type="text/css" />
    
 </head>
-<br />
+
 <div class="row">
     <div class="column">
         <div class="card">
@@ -14,28 +14,26 @@
 
             <div class="container">
                 <form action="/dashboard/settings-password" method="post">
-                    <div>
-                        <label for="newPwd">Wprowadź nowe hasło:</label>
-                        <input type="password" id="newPwd" name="newPwd"/>
-                    </div>
-                    <input type="hidden" name="userID" value="@ViewBag.userID" />
-                    <div>
-                    <div>
-                        <button type="submit">Zmień hasło</button>
+                    <div><h2>Ustawienia użytkownika:</h2></div>
+                        <div>
+                            <label for="newPwd">Wprowadź nowe hasło:</label>
+                            <input type="password" id="newPwd" name="newPwd"/>
+                            <input type="hidden" name="userID" value="@ViewBag.ID" />
+                            <button type="submit">Zatwierdź</button>
                     </div>
                 </form>
 
 
-                <form asp-action="EditImage" asp-controller="Settings" method="post" enctype="multipart/form-data">
+                    <form action="/dashboard/settings-image" method="post" enctype="multipart/form-data">
                     <div>
-                        <label for="file">Choose a photo:</label>
+                        <label for="file">Wybierz zdjęcie:</label>
                         <input type="file" id="file" name="file" accept="image/*" />
-                    </div>
-                    <div>
-                        <button type="submit">Upload</button>
+                        <input type="hidden" name="userID" value="@ViewBag.ID" />
+                        <button type="submit">Zatwierdź</button>
                     </div>
                 </form>
             </div>
         </div>
     </div>
 </div>
+
