--- a/ZPZP/Views/Quality/AdminDashboard.cshtml
+++ b/ZPZP/Views/Quality/AdminDashboard.cshtml
@@ -27,6 +27,7 @@
                 <p class="title"><span>@ViewBag.UserLevel</span> działu <span>@ViewBag.Category</span></p>
                 <p class="title"><span>@ViewBag.Email</span></p>
                 <p><span>@ViewBag.PhoneNumber</span></p>
+                </div>
             </div>   
          </div>
     </div>
