--- a/ZPZP/Views/Shared/_adminProductionLayout.cshtml
+++ b/ZPZP/Views/Shared/_adminProductionLayout.cshtml
@@ -13,7 +13,7 @@
         <div id="main">
             <div class="btn-group" style="width:100%">
                 <button style="width:20%" onclick="window.location.href='dashboard/settings';">Ustawienia</button>
-                <button style="width:20%">Dodaj projekt</button>
+                <button style="width:20%" onclick="window.location.href='dashboard/addproject';">Dodaj projekt</button>
                 <button style="width:20%">Produkcja</button>
                 <button style="width:20%">Lista pracowników</button>
                 <button style="width:20%">Statystyki</button>
