--- a/ZPZP/Views/Home/Index.cshtml
+++ b/ZPZP/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
  
     <h2>Logowanie użytkownika:</h2>
 
-    <form action="/dashboard" method="post">
+    <form action="/dashboard/home" method="post">
         <label for="username">Nazwa użytkownika:</label><br>
         <input type="text" id="username" name="username" value="Default"><br>
         <label for="pwd">Hasło:</label><br>
