--- a/ZPZP/Views/Production/AddProject.cshtml
+++ b/ZPZP/Views/Production/AddProject.cshtml
@@ -6,19 +6,49 @@
     <link href="/Styles/StyleAdmin.css" rel="stylesheet" type="text/css" />
 
 </head>
-<form action="/dashboard" method="post">
-    <label for="username">Nazwa użytkownika:</label><br>
-    <input type="text" id="username" name="username" value="Default"><br>
-    <label for="pwd">Hasło:</label><br>
-    <input type="password" id="pwd" name="pwd"><br>
+<div class="row">
+    <div class="column">
+        <div class="card">
+            <div class="container">
+                <form action="/dashboard/addproject-add" method="post">
+                    <label for="SerialNumber">Numer seryjny:</label>
+                    <input type="text" id="SerialNumber" name="SerialNumber" value="Eg. 12312"><br />
+                    <label for="Name">Nazwa projektu: </label>
+                    <input type="text" id="Name" name="Name" value="Eg. Paczkomat"><br />
+                    <label for="documentation">Dokumentacja:</label>
+                    <input type="file" id="file" name="file" accept="image/*" />
+                    <input type="hidden" name="userID" value="@ViewBag.ID" /><br />
 
-    <div class="dropdown">
-        <label for="dropdown">Dział:</label><br>
-        <select name="dropdown">
-            <option value="produkcja">Produkcja</option>
-            <option value="jakość">Kontrola jakości</option>
-            <option value="logistyka">Logistyka</option>
-        </select>
+   
+ 
+                        @{
+                        var productionEmployees = ViewBag.ProductionEmployees as SelectList;
+                        }
+
+                        @if (productionEmployees != null)
+                        {
+                            <div class="dropdown">
+                                <label for="dropdownone">Przypisz pracownika:</label><br>
+                                @Html.DropDownList("DropdownOne", productionEmployees, "-- Wybierz pracownika --", new { @class = "form-control" })
+                            </div>
+                        }
+                        else
+                        {
+                            <p>Brak dostępnych pracowników do przypisania.</p>
+                        }
+                    <div class="dropdown">
+                        <label for="dropdowntwo">Przypisz pracownika:</label><br>
+                         @Html.DropDownList("Dropdowntwo", productionEmployees, "-- Wybierz pracownika --", new { @class = "form-control" })
+                    </div>
+    
+                    <div class="dropdownthree">
+                        <label for="dropdown">Przypisz pracownika:</label><br>
+                         @Html.DropDownList("Dropdownthree", productionEmployees, "-- Wybierz pracownika --", new { @class = "form-control" })
+                    </div>    
+                    <input type="submit" value="Zatwierdź"><br>
+                </form>
+            </div>
+        </div>
     </div>
-    <br />
-    <input type="submit" value="Zatwierdź"><br>
+</div>
+
