--- a/ZPZP/Views/Shared/_adminProductionLayout.cshtml
+++ b/ZPZP/Views/Shared/_adminProductionLayout.cshtml
@@ -14,7 +14,7 @@
             <div class="btn-group" style="width:100%">
                 <button style="width:20%" onclick="window.location.href='/dashboard/settings';">Ustawienia</button>
                 <button style="width:20%" onclick="window.location.href='/dashboard/addproject';">Dodaj projekt</button>
-                <button style="width:20%">Produkcja</button>
+                <button style="width:20%" onclick="window.location.href='/dashboard/showprojects';">Produkcja</button>
                 <button style="width:20%">Pracownicy</button>
                 <button style="width:20%">Statystyki</button>
             </div>
