Production Table ver 1.0

--- a/ZPZP/Views/Shared/_adminProductionLayout.cshtml
+++ b/ZPZP/Views/Shared/_adminProductionLayout.cshtml
@@ -12,9 +12,9 @@
             </div>
         <div id="main">
             <div class="btn-group" style="width:100%">
-                <button style="width:20%" onclick="window.location.href='/dashboard/settings';">Ustawienia</button>
-                <button style="width:20%" onclick="window.location.href='/dashboard/addproject';">Dodaj projekt</button>
-                <button style="width:20%" onclick="window.location.href='/dashboard/showprojects';">Produkcja</button>
+                <button style="width:20%" onclick="window.location.href='/dashboard/production/manager/settings';">Ustawienia</button>
+                <button style="width:20%" onclick="window.location.href='/dashboard/production/manager/addproject';">Dodaj projekt</button>
+                <button style="width:20%" onclick="window.location.href='/dashboard/production/manager/showprojects';">Produkcja</button>
                 <button style="width:20%">Pracownicy</button>
                 <button style="width:20%">Statystyki</button>
             </div>
